<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_map">Map</string>
    <string name="action_share">Share</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Strings related to Widgets -->
    <string name="title_widget_today">Sunshine Today</string>
    <string name="title_widget_detail">Sunshine Details</string>

    <!-- Strings related to Muzei Source -->
    <string name="muzei_description">Today\'s weather</string>

    <!-- Indicating there are no messages -->
    <string name="empty_view">No Weather Information Available.</string>

    <!-- Indicating there are no messages because of the lack of network -->
    <string name="empty_view_no_network">No Weather Information Available Because The Lack Of Network.</string>

    <!-- Indicating server down -->
    <string name="empty_forecast_list_server_down">No weather information available. The server is not returning data.</string>

    <!-- Indicating server error -->
    <string name="empty_forecast_list_server_error">No weather information available. The server is not returning valid data. Please check for an updated version of Sunshine.</string>

    <!-- Indicating location invalid -->
    <string name="empty_forecast_list_invalid_location" translatable="false">No weather information available. The location in settings is not recognized by the weather server.</string>

    <!--Title for the location setting-->
    <string name="pref_location_title">Location</string>

    <!-- Key name for storing location in SharedPreference -->
    <string name="pref_location_status_key" translatable="false">loc-status</string>

    <!-- Key name for storing location latlong in SharedPreferences -->
    <string name="pref_location_latitude" translatable="false">loc-latitude</string>
    <string name="pref_location_longitude" translatable="false">loc-longitude</string>

    <!-- Key for the location setting -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- Default value for the location setting -->
    <string name="pref_location_defValue" translatable="false">Montreal</string>

    <!-- Content description for the get current location button in the location preference -->
    <string name="pref_current_location_desc">Use my location</string>

    <!-- Strings used when displaying the state of the Location in settings -->
    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_unknown_description">Validating Location... (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>


    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!--Title for the temperature units setting-->
    <string name="pref_unit_title">Temperature Units</string>

    <!--Key for the temperature units setting-->
    <string name="pref_unit_key">unit</string>

    <string name="unit_entries_metric">Metric</string>
    <string name="unit_entries_imperial">Imperial</string>
    <string name="unit_entryValue_metric">metric</string>
    <string name="unit_entryValue_imperial">imperial</string>

    <!--Entries for the temperature units setting-->
    <string-array name="pref_unit_entries">
        <item>@string/unit_entries_metric</item>
        <item>@string/unit_entries_imperial</item>
    </string-array>

    <!--Entry Value arrays for the temperature units setting-->
    <string-array name="pref_unit_entryValues">
        <item>@string/unit_entryValue_metric</item>
        <item>@string/unit_entryValue_imperial</item>
    </string-array>

    <!--Default value for the temperature unit setting-->
    <string name="pref_unit_defValue">metric</string>

    <!-- Icon pack values -->
    <string name="pref_icon_title">Icon Pack</string>
    
    <string name="pref_icon_key">icon</string>

    <string name="icon_entries_original">Original</string>
    <string name="icon_entries_colored">Colored</string>
    <string name="icon_entries_mono">Mono</string>
    <string name="icon_entryValue_original" translatable="false">https://raw.githubusercontent.com/Osswitch/Sunshine_version3/master/app/src/main/res/drawable-xxhdpi/art_%s.png</string>
    <string name="icon_entryValue_colored" translatable="false">https://raw.githubusercontent.com/Osswitch/Sunshine_version3/master/app/src/main/res/drawable/colored_art_%s.png</string>
    <string name="icon_entryValue_mono" translatable="false">https://raw.githubusercontent.com/Osswitch/Sunshine_version3/master/app/src/main/res/drawable/mono_art_%s.png</string>

    <string-array name="pref_icon_entries">
        <item>@string/icon_entries_original</item>
        <item>@string/icon_entries_colored</item>
        <item>@string/icon_entries_mono</item>
    </string-array>

    <string-array name="pref_icon_entryValues">
        <item>@string/icon_entryValue_original</item>
        <item>@string/icon_entryValue_colored</item>
        <item>@string/icon_entryValue_mono</item>
    </string-array>

    <string name="pref_icon_defValue">original</string>

    <!-- indicated you are under no wifi environment -->
    <string name="no_wifi">You need to download other icon under WIFI environment.</string>


    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g>
    </string>

    <!-- Temperature formats-->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0
    </string>

    <string name="wind">Wind</string>
    <!-- Windspeed formats -->
    <!-- Wind in mph -->
    <string name="format_wind_mph"><xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id ="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh"><xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>


    <string name="pressure">Pressure</string>
    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure"><xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <string name="humidity">Humidity</string>
    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity"><xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- Icon resource URL format -->
    <string name="format_art_url" translatable="false">https://raw.githubusercontent.com/Osswitch/Sunshine_version3/master/app/src/main/res/drawable-xxhdpi/art_<xliff:g id="description">%s</xliff:g>.png</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine_version3.example.com</string>
    <string name="content_authority">com.example.zhang.sunshine_version3.app</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification
    </string>

    <!-- Weather Conditions -->
    <string name="condition_2xx">Storm</string>
    <string name="condition_3xx">Drizzle</string>
    <string name="condition_500">Light Rain</string>
    <string name="condition_501">Moderate Rain</string>
    <string name="condition_502">Heavy Rain</string>
    <string name="condition_503">Intense Rain</string>
    <string name="condition_504">Extreme Rain</string>
    <string name="condition_511">Freezing Rain</string>
    <string name="condition_520">Light Shower</string>
    <string name="condition_521">Shower</string>
    <string name="condition_522">Heavy Shower</string>
    <string name="condition_531">Ragged Shower</string>
    <string name="condition_600">Light Snow</string>
    <string name="condition_601">Snow</string>
    <string name="condition_602">Heavy Snow</string>
    <string name="condition_611">Sleet</string>
    <string name="condition_612">Shower Sleet</string>
    <string name="condition_615">Rain and Snow</string> <!-- light rain and snow -->
    <string name="condition_616">Rain and Snow</string>
    <string name="condition_620">Shower Snow</string> <!-- light shower snow -->
    <string name="condition_621">Shower Snow</string>
    <string name="condition_622">Shower Snow</string> <!-- heavy shower snow -->
    <string name="condition_701">Mist</string>
    <string name="condition_711">Smoke</string>
    <string name="condition_721">Haze</string>
    <string name="condition_731">Sand, Dust</string>
    <string name="condition_741">Fog</string>
    <string name="condition_751">Sand</string>
    <string name="condition_761">Dust</string>
    <string name="condition_762">Volcanic Ash</string>
    <string name="condition_771">Squalls</string>
    <string name="condition_781">Tornado</string>
    <string name="condition_800">Clear</string>
    <string name="condition_801">Mostly Clear</string>
    <string name="condition_802">Scattered Clouds</string>
    <string name="condition_803">Broken Clouds</string>
    <string name="condition_804">Overcast Clouds</string>
    <string name="condition_900">Tornado</string>
    <string name="condition_901">Tropical Storm</string>
    <string name="condition_902">Hurricane</string>
    <string name="condition_903">Cold</string>
    <string name="condition_904">Hot</string>
    <string name="condition_905">Windy</string>
    <string name="condition_906">Hail</string>
    <string name="condition_951">Calm</string>
    <string name="condition_952">Light Breeze</string>
    <string name="condition_953">Gentle Breeze</string>
    <string name="condition_954">Breeze</string> <!-- moderate breeze -->
    <string name="condition_955">Fresh Breeze</string>
    <string name="condition_956">Strong Breeze</string>
    <string name="condition_957">High Wind</string>
    <string name="condition_958">Gale</string>
    <string name="condition_959">Severe Gale</string>
    <string name="condition_960">Storm</string>
    <string name="condition_961">Violent Storm</string>
    <string name="condition_962">Hurricane</string>

    <string name="condition_unknown">Unknown (<xliff:g id="low">%1$s</xliff:g>)</string>

    <!-- For Shared Element Transitions -->
    <string name="detail_icon_transition_name" translatable="false">TN_DetailIcon</string>

    <!-- Used to form a severe weather alert that reads "Heads up: <weather> in <location>!" -->
    <string name="gcm_weather_alert">Heads up: %1$s in %2$s!</string>
    <string name="gcm_defaultSendId">470095824782</string>

    <!-- For Google Places API Attributions -->
    <string name="attribution_text">Powered by Google</string>
</resources>
