<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.example.zhang.sunshine_version3.app">

    <com.example.zhang.sunshine_version3.app.LocationEditTextPreference
        android:title="@string/pref_location_title"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_defValue"
        android:inputType="text"
        android:singleLine="true"
        custom:minLength="3"/>

    <ListPreference
        android:title="@string/pref_unit_title"
        android:key="@string/pref_unit_key"
        android:entries="@array/pref_unit_entries"
        android:entryValues="@array/pref_unit_entryValues"
        android:defaultValue="@string/pref_unit_defValue"/>

    <ListPreference
        android:title="@string/pref_icon_title"
        android:key="@string/pref_icon_key"
        android:entries="@array/pref_icon_entries"
        android:entryValues="@array/pref_icon_entryValues"
        android:defaultValue="@string/pref_icon_defValue"/>


    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />
</PreferenceScreen>